Cleans up code and documentation.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 </head>
 <body>
     <nav class="navDiv"></nav>
+
+    <!-- <form class="signupForm">
+        <h1>SignUp</h1>
+        <label>Enter Username</label>
+        <input type="text" name="username"></input>
+
+        <label>EnterPassword</label>
+        <input type="password" name="password"></input>
+
+        <input type="submit" value="Create Account"></input>
+    </form> -->
+
     <div class="planDiv"></div>
     <div class="listDiv"></div>
     
@@ -41,7 +53,7 @@
     </form>
 
     <footer class="footDiv">
-        <img class="tapMe" src="https://media3.giphy.com/media/dCERkihZ9m7xjIvSau/source.gif" alt="Click Me">
+        <!-- <img class="tapMe" src="https://media3.giphy.com/media/dCERkihZ9m7xjIvSau/source.gif" alt="Click Me"> -->
     </footer>
 
     <script src="app.js"></script>
